Implementação do card de desconto com formulário e configurações adicionais

--- a/partials/cardCupons.html
+++ b/partials/cardCupons.html
@@ -13,7 +13,7 @@
         <h7 style="color: grey;">Esta tela já está definida em outra. Clique no botão abaixo para visualizar a tela 'Adicionar cupom' que é chamado a partir desta tela</h7>
       </div>
       <div class="text-center mt-3">
-        <button class="btn btn-primary">Adicionar cupom</button>
+        <button class="btn btn-primary" id="btnAdicionarCupom">Adicionar cupom</button>
       </div>
     </div>
 </div>
