Implementação da seção de Taxas e correções

--- a/partials/cardComplementosLojas.html
+++ b/partials/cardComplementosLojas.html
@@ -342,9 +342,10 @@
           <div class="list-group mt-2 ui-sortable" id="sortable">
             <!-- Item: Lanche da manhã -->
             <div class="list-group-item flex-column ui-state-default mt-1 ui-sortable-handle">
-              <div class="row">
+              <div class="row align-items-center">
                 <input type="hidden" name="order-rD6eWwNaXyqBXbYP">
                 <div class="col-lg-10">
+                  <i class="bi bi-grip-vertical me-2 text-muted"></i>
                   Lanche da manhã
                 </div>
                 <div class="col-lg-2">
@@ -355,9 +356,10 @@
             
             <!-- Item: Almoço -->
             <div class="list-group-item flex-column ui-state-default mt-1 ui-sortable-handle">
-              <div class="row">
+              <div class="row align-items-center">
                 <input type="hidden" name="order-v2n1lBNLdNbwJz68">
                 <div class="col-lg-10">
+                  <i class="bi bi-grip-vertical me-2 text-muted"></i>
                   Almoço
                 </div>
                 <div class="col-lg-2">
@@ -368,9 +370,10 @@
             
             <!-- Item: Lanche da tarde -->
             <div class="list-group-item flex-column ui-state-default mt-1 ui-sortable-handle">
-              <div class="row">
+              <div class="row align-items-center">
                 <input type="hidden" name="order-zEL02ky5qy1pqr3d">
                 <div class="col-lg-10">
+                  <i class="bi bi-grip-vertical me-2 text-muted"></i>
                   Lanche da tarde
                 </div>
                 <div class="col-lg-2">
@@ -381,9 +384,10 @@
             
             <!-- Item: Jantar -->
             <div class="list-group-item flex-column ui-state-default mt-1 ui-sortable-handle">
-              <div class="row">
+              <div class="row align-items-center">
                 <input type="hidden" name="order-XWoe6J7mRyDYBb2n">
                 <div class="col-lg-10">
+                  <i class="bi bi-grip-vertical me-2 text-muted"></i>
                   Jantar
                 </div>
                 <div class="col-lg-2">
@@ -394,9 +398,10 @@
             
             <!-- Item: Som e operador de som -->
             <div class="list-group-item flex-column ui-state-default mt-1 ui-sortable-handle">
-              <div class="row">
+              <div class="row align-items-center">
                 <input type="hidden" name="order-0epO1n72gJyG8rMB">
                 <div class="col-lg-10">
+                  <i class="bi bi-grip-vertical me-2 text-muted"></i>
                   Som e operador de som
                 </div>
                 <div class="col-lg-2">
