--- a/partials/cardComplementoAdd.html
+++ b/partials/cardComplementoAdd.html
@@ -3,7 +3,7 @@
   <div class="card-header border-bottom d-flex justify-content-between align-items-center">
     <h5 class="mb-0">Adicionar Complemento</h5>
     <div>
-      <button class="btn btn-outline-secondary me-2" id="btnVoltarComplementoAddHeader">Voltar</button>
+      <button class="btn btn-secondary me-2" id="btnVoltarComplementoAddHeader">Voltar</button>
       <button class="btn btn-warning" id="btnSalvarComplementoAddHeader">Salvar</button>
     </div>
   </div>
