Alterações manuais em arquivos do projeto

--- a/partials/cardContratantes.html
+++ b/partials/cardContratantes.html
@@ -2,7 +2,7 @@
 <div class="card card-small">
     <div class="card-header border-bottom d-flex justify-content-between align-items-center">
         <h5 class="mb-0">Contratantes</h5>
-        <button type="button" class="btn btn-primary" onclick="window.location.href='/conta/maintainorder/create/'">Gerar Pedido</button>
+        <button class="btn btn-accent" id="botaoGerarPedido">Adicionar Pedido</button>
     </div>
   
     <div class="card-body">
@@ -39,7 +39,7 @@
   
         <div class="row g-3 mt-3 align-items-center">
             <div class="col-md-9">
-                <button type="button" class="btn btn-primary" id="reportBtn">Relatório Detalhado</button>
+                <button type="button" class="btn btn-secondary" id="reportBtn">Relatório Detalhado</button>
             </div>
             <div class="col-md-3">
                 <label for="qtdBuyers">Qtd contratantes:</label>
@@ -100,7 +100,7 @@
     </div>
   
     <div class="card-footer text-center">
-        <button type="button" class="btn btn-primary">Gerar Pedido</button>
+        <button type="button" class="btn btn-primary">Adicionar Pedido</button>
     </div>
   </div>
   
