--- a/partials/cardPedidos.html
+++ b/partials/cardPedidos.html
@@ -3,6 +3,8 @@
   <!-- Cabeçalho -->
   <div class="card-header border-bottom d-flex justify-content-between align-items-center">
     <h5 class="mb-0">Pedidos</h5>
+    <!-- Botão "Adicionar Pedido" no header -->
+    <button class="btn btn-accent" id="botaoAdicionarPedido">Adicionar Pedido</button>
   </div>
   
   <!-- Corpo -->
