--- a/partials/cardPedidosAtendimento.html
+++ b/partials/cardPedidosAtendimento.html
@@ -58,7 +58,7 @@
             </div>
   
             <div class="mb-3" id="divBtnCreate">
-              <button type="button" class="btn btn-warning" id="btnCreateOrder">Criar Pedido</button>
+              <button type="button" class="btn btn-primary" id="btnCreateOrder">Criar Pedido</button>
             </div>
           </div>
         </div>
