--- a/partials/menuAtendimento.html
+++ b/partials/menuAtendimento.html
@@ -10,9 +10,9 @@
       <li class="nav-item">
         <a class="nav-link" href="#" id="menuContratantesAtendimento">Contratantes</a>
       </li>
-      <li class="nav-item">
+      <!--li class="nav-item">
         <a class="nav-link" href="#" id="menuUsuariosAtendimento">Usuários</a>
-      </li>
+      </li-->
     </ul>
   </div>
   
