Padronização de textos e centralização de conteúdo nos cards

--- a/partials/cardCupons.html
+++ b/partials/cardCupons.html
@@ -9,8 +9,8 @@
     <!-- ################################################################################################### -->
   
     <div class="card-body">
-      <div>
-        <h7 style="color: grey;">Esta tela já está definida em outra. Clique no botão abaixo para visualizar a tela 'Adicionar cupom' que é chamado a partir desta tela</h7>
+      <div class="text-center">
+        <h7 style="color: grey;">Este padrão já está definido. Clique no botão abaixo para visualizar a tela que é chamada a partir desta.</h7>
       </div>
       <div class="text-center mt-3">
         <button class="btn btn-primary" id="btnAdicionarCupom">Adicionar cupom</button>
