--- a/partials/cardMeiosPagamento.html
+++ b/partials/cardMeiosPagamento.html
@@ -8,7 +8,7 @@
   <!-- Card Body -->
   <div class="card-body">
     <div class="text-center">
-      <p class="text-muted">Esta tela já está definida em outra. Clique nos botões abaixo para visualizar os tipos de card distintos para cada meio de pagamento</p>
+      <p class="text-muted">Este padrão já está definido. Clique nos botões abaixo para visualizar os cards específicos para cada meio de pagamento.</p>
     </div>
     <div class="text-center mt-3">
       <button class="btn btn-primary me-2" id="btnPagamento01">PIX / Manual / Débito / Crédito em conta / Crédito de Troca</button>
