--- a/partials/cardDivisaoReceitas.html
+++ b/partials/cardDivisaoReceitas.html
@@ -5,7 +5,7 @@
     </div>
     
     <div class="card-body">
-      <div class="text-start mb-4">
+      <div class="text-center mb-4">
         <p class="text-muted">Este padrão já está definido.</p>
       </div>
     </div>
