--- a/partials/cardFormularios.html
+++ b/partials/cardFormularios.html
@@ -19,16 +19,16 @@
     <div class="tab-content mt-3" id="formulariosTabContent">
       <!-- Aba de Contratantes -->
       <div class="tab-pane fade show active" id="contratantes" role="tabpanel" aria-labelledby="contratantes-tab">
-        <div class="mb-4">
-          <p class="text-muted text-start">Este padrão já está definido. Clique no botão abaixo para visualizar a tela que é chamada a partir desta</p>
+        <div class="text-center">
+          <p class="text-muted">Este padrão já está definido. Clique no botão abaixo para visualizar a tela que é chamada a partir desta</p>
           <button type="button" class="btn btn-primary" id="btnAdicionarFormularioContratante">Adicionar formulário</button>
         </div>
       </div>
       
       <!-- Aba de Usuários -->
       <div class="tab-pane fade" id="usuarios" role="tabpanel" aria-labelledby="usuarios-tab">
-        <div class="mb-4">
-          <p class="text-muted text-start">Este padrão já está definido. Clique no botão abaixo para visualizar a tela que é chamada a partir desta</p>
+        <div class="text-center">
+          <p class="text-muted">Este padrão já está definido. Clique no botão abaixo para visualizar a tela que é chamada a partir desta</p>
           <button type="button" class="btn btn-primary" id="btnAdicionarFormularioUsuario">Adicionar formulário</button>
         </div>
       </div>
