--- a/partials/cardNumPedido.html
+++ b/partials/cardNumPedido.html
@@ -879,10 +879,8 @@
 
 
         <!-- Conteúdo do tab Incluir Pedido -->
-        <div class="tab-pane fade" id="incluir" role="tabpanel" aria-labelledby="incluir-tab">
-          <p style="color: rgb(197, 197, 197);">Conteúdo Incluir Pedido<br>
-          No site de referência não há conteúdo<br>
-          Verificar com Clementino</p>
+        <div class="tab-pane fade text-center" id="incluir" role="tabpanel" aria-labelledby="incluir-tab">
+          <p class="text-muted">Este padrão já está definido.</p>
         </div>
 
 
