--- a/partials/cardTermos.html
+++ b/partials/cardTermos.html
@@ -5,9 +5,9 @@
   </div>
   
   <div class="card-body">
-    <div class="text-start mb-4">
+    <div class="text-center mb-4">
       <p class="text-muted">Este padrão já está definido. Clique no botão abaixo para visualizar a tela que é chamada a partir desta</p>
-      <div class="text-start">
+      <div class="text-center">
         <button type="button" class="btn btn-primary" id="btnTermos">Termos de uso</button>
       </div>
     </div>
