Implementação do cardHorarioAdd.html e setupCardHorarioAddEvents()

--- a/partials/cardComposicoes.html
+++ b/partials/cardComposicoes.html
@@ -2,7 +2,7 @@
 <div class="card card-small">
   <div class="card-header border-bottom d-flex justify-content-between align-items-center">
     <h5 class="mb-0">Composições</h5>
-    <button class="btn btn-accent" id="botaoAdicionarComposicao">Adicionar Composição</button>
+    <!--button class="btn btn-accent" id="botaoAdicionarComposicao">Adicionar Composição</button-->
   </div>
   
   <div class="card-body">
