--- a/partials/cardHorarioAdd.html
+++ b/partials/cardHorarioAdd.html
@@ -47,8 +47,27 @@
                 </div>
               </div>
             </form>
+            
+            <!-- Tabela de Horários -->
+            <div class="table-responsive mt-4">
+              <table class="table table-striped table-hover" id="tabelaHorarios">
+                <thead>
+                  <tr>
+                    <th scope="col" style="width: 25%;">Horário Inicial</th>
+                    <th scope="col" style="width: 25%;">Horário Final</th>
+                    <th scope="col" style="width: 25%;">Preço</th>
+                    <th scope="col" class="text-center" style="width: 25%;">Ações</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- Tabela inicialmente vazia -->
+                </tbody>
+              </table>
+            </div>
+            
             <div class="text-start mt-3">
-              <button class="btn btn-primary" id="btnAvancarHorario">Avançar</button>
+              <button class="btn btn-primary me-2" id="btnAvancarHorario">Avançar</button>
+              <button class="btn btn-warning" id="btnAdicionarHorario">Adicionar</button>
             </div>
           </div>
         </div>
