Implementação das seções Horários e Serviços no menu secundário. Criação de novos cards para adicionar serviços, horários, prazos e composições. Correção de bugs na navegação entre cards.

--- a/partials/menuConfigLojas.html
+++ b/partials/menuConfigLojas.html
@@ -4,8 +4,14 @@
       <li class="nav-item">
         <a class="nav-link active" href="#" id="menuUnidades">Unidades</a>
       </li>
-      <li class="nav-item">
+      <!--li class="nav-item">
         <a class="nav-link" href="#" id="menuComposicoes">Composições</a>
+      </li-->
+      <li class="nav-item">
+        <a class="nav-link" href="#" id="menuHorarios">Horários</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" id="menuServicos">Serviços</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#" id="menuComplementosLojas">Complementos</a>
