Melhoria na interface de faixa etária no formulário de serviços, substituindo spans por placeholders

--- a/partials/cardServicoAdd.html
+++ b/partials/cardServicoAdd.html
@@ -64,23 +64,19 @@
                 <div class="col-12">
                   <div class="row align-items-center">
                     <div class="col input-container">
-                      <input class="form-control" type="number" min="0" name="before_year_age" id="before_year_age" value="">
-                      <span class="placeholder">Anos</span>
+                      <input class="form-control" type="number" min="0" name="before_year_age" id="before_year_age" value="" placeholder="Anos">
                     </div>   
                     <span class="mt-1 text-center" style="width: auto;">e</span>
                     <div class="col input-container">
-                      <input class="form-control" type="number" min="0" name="before_month_age" id="before_month_age" value="">
-                      <span class="placeholder">Meses</span>
+                      <input class="form-control" type="number" min="0" name="before_month_age" id="before_month_age" value="" placeholder="Meses">
                     </div>
                     <span class="mt-1 text-center" style="width: auto;">a</span>
                     <div class="col input-container">
-                      <input class="form-control" type="number" min="0" name="after_year_age" id="after_year_age" value="">
-                      <span class="placeholder">Anos</span>
+                      <input class="form-control" type="number" min="0" name="after_year_age" id="after_year_age" value="" placeholder="Anos">
                     </div>
                     <span class="mt-1 text-center" style="width: auto;">e</span>
                     <div class="col input-container">
-                      <input class="form-control" type="number" min="0" name="after_month_age" id="after_month_age" value="">
-                      <span class="placeholder">Meses</span>
+                      <input class="form-control" type="number" min="0" name="after_month_age" id="after_month_age" value="" placeholder="Meses">
                     </div>
                   </div>
                 </div>
