--- a/partials/cardDescontosFormaPagamento.html
+++ b/partials/cardDescontosFormaPagamento.html
@@ -92,24 +92,13 @@
               <div class="tab-content" id="myTabContent">
                 <!-- Aba de Horários -->
                 <div class="tab-pane fade show active" id="horarios" role="tabpanel" aria-labelledby="horarios-tab">
-                  <!-- Modificação no select para adicionar ícones de aviso -->
+                  <!-- Modificação de seletor de serviço para switch -->
                   <div class="row mb-3">
                     <div class="col-12">
-                      <label for="selectServico" class="form-label">Selecione o Serviço</label>
-                      <select class="form-select" id="selectServico">
-                        <option value="" selected disabled>Selecione um serviço</option>
-                        <option value="servico1">Serviço - 2025 Julho - Semana de 14 a 18 &#xf058;</option>
-                        <option value="servico2">Serviço - 2025 Julho - Semana de 07 a 11</option>
-                        <option value="servico3">Serviço - 2025 Julho - Diárias &#xf058;</option>
-                        <option value="servico4">Serviço - 2025 - Janeiro - Semana de 06 a 10</option>
-                        <option value="servico5">Serviço - 2025 - Janeiro - Semana de 13 a 17</option>
-                        <option value="servico6">Serviço - 2025 - Janeiro - Semana de 20 a 24</option>
-                        <option value="servico7">Serviço - 2025 - Janeiro - Semana de 27 a 31 &#xf058;</option>
-                        <option value="servico8">Serviço - 2024 - 08 a 12 de julho</option>
-                        <option value="servico9">Serviço - 2024 - 15 a 19 de julho</option>
-                        <option value="servico10">Serviço - 2024 - 22 a 26 de julho</option>
-                        <option value="servico11">Serviço - 2024 - 29 de julho a 02 de agosto</option>
-                      </select>
+                      <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" role="switch" id="switchExibirServicosInativos">
+                        <label class="form-check-label" for="switchExibirServicosInativos">Exibir serviços inativos</label>
+                      </div>
                     </div>
                   </div>
 
@@ -124,8 +113,68 @@
                     </div>
                   </div>
 
-                  <!-- Períodos (aparece apenas quando um serviço é selecionado) -->
-                  <div id="periodos" class="d-none">
+                  <!-- Badges para serviços inativos (toggle via switch) -->
+                  <div class="row mb-3 d-none" id="badgesInativos">
+                    <div class="col-12">
+                      <div class="d-flex flex-wrap gap-2 mt-2">
+                        <h6><span class="badge border border-secondary text-white text-bg-secondary px-3 py-2">Serviço - 2025 Junho - Semana de 10 a 17</span></h6>
+                        <h6><span class="badge border border-secondary text-white text-bg-secondary px-3 py-2">Serviço - 2025 Junho - Diárias</span></h6>
+                        <h6><span class="badge border border-secondary text-white text-bg-secondary px-3 py-2">Serviço - 2025 - Dezembro - Semana de 12 a 19</span></h6>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Períodos para serviços ativos (alguns pré-selecionados) -->
+                  <div id="periodosAtivos" class="d-none">
+                    <div class="row mb-3">
+                      <div class="col-12">
+                        <label class="form-label">Selecione os Períodos</label>
+                      </div>
+                    </div>
+                    <div class="row mb-3">
+                      <div class="col-md-4">
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="periodo1" id="periodo1Ativo" checked>
+                          <label class="form-check-label" for="periodo1Ativo">Semana Tarde</label>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="periodo2" id="periodo2Ativo">
+                          <label class="form-check-label" for="periodo2Ativo">Semana Tarde Estendida</label>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="periodo3" id="periodo3Ativo" checked>
+                          <label class="form-check-label" for="periodo3Ativo">Semana Manhã</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row mb-3">
+                      <div class="col-md-4">
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="periodo4" id="periodo4Ativo">
+                          <label class="form-check-label" for="periodo4Ativo">Semana Integral</label>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="periodo5" id="periodo5Ativo">
+                          <label class="form-check-label" for="periodo5Ativo">Semana Integral Estendido</label>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="periodo6" id="periodo6Ativo">
+                          <label class="form-check-label" for="periodo6Ativo">08:00 às 12:00</label>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Períodos para serviços inativos (todos desmarcados) -->
+                  <div id="periodosInativos" class="d-none">
                     <div class="row mb-3">
                       <div class="col-12">
                         <label class="form-label">Selecione os Períodos</label>
@@ -223,5 +272,3 @@
     <button class="btn btn-warning" id="btnSalvarDescontosFormaPagamento">Salvar</button>
   </div>
 </div>
-
-
